--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,7 +1,32 @@
 html {
     height: 100%;
 }
+
 body {
     height: 100%;
     background-color: #2C5282;
+}
+
+.letter-div > svg {
+    height: 200px;
+    width: 200px;
+}
+
+.letter-div > svg:hover {
+   
+    animation: shuffle-letter 0.6s ease-out;
+    transform-origin: center;
+}
+
+@keyframes shuffle-letter {
+    0% { transform: rotate(0deg);}
+    10% { transform: rotate(5deg);}
+    20% { transform: rotate(0deg);}
+    30% { transform: rotate(-5deg);}
+    40% { transform: rotate(0deg);}
+    50% { transform: rotate(5deg);}
+    60% { transform: rotate(0deg);}
+    70% { transform: rotate(-5deg);}
+    80% { transform: rotate(0deg);}
+
 }
