--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -13,7 +13,8 @@ body {
 }
 
 .letter-div > svg:hover {
-   
+    fill: cadetblue;
+    stroke: black;
     animation: shuffle-letter 0.6s ease-out;
     transform-origin: center;
 }
