--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -25,9 +25,17 @@ body {
     width: 200px;
 }
 
-.letter-div > svg:hover {
+.letter-div:hover > div > svg {
     animation: shake-letter 0.6s ease-out;
     transform-origin: center;
+}
+
+.letter-div:hover > div > svg > .letter-fill {
+    fill: cadetblue;    
+}
+
+.letter-rotated {
+    transform: rotateY(35deg);
 }
 
 .letter-fill {
@@ -38,10 +46,6 @@ body {
     fill: none;
     stroke: black;
     stroke-linejoin: round;
-}
-
-.letter-div > svg:hover > .letter-fill {
-    fill: cadetblue;    
 }
 
 @keyframes shake-letter {
