--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -11,6 +11,18 @@ body {
     background-color: #2C5282;
 }
 
+svg {
+    display: unset;
+}
+
+div {
+    display: unset;
+}
+
+li {
+    display: inline;
+}
+
 /*
 * === Letter styling ===
 */
