--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -100,9 +100,9 @@ li {
     display: none;
     height: 10px;
     position: relative;
-    top: 0px;
+    top: 5px;
     opacity: 0;
-    animation: bounce 2s 3s ease, appear 3s 3s;    
+    animation: fade 5s 3s;    
     animation-fill-mode: forwards;
 }
 
@@ -112,21 +112,8 @@ li {
     }
 }
 
-@keyframes appear {
-    0% { opacity: 0 ;}
-    100% { opacity: 1 ;}
-}
-
-@keyframes bounce {
-    0% {  top: 5px; }
-    10% { top: -5px; }
-    20% { top: 5px; }
-    30% { top: -5px; }
-    40% { top: 5px; }    
-    50% { top: -5px; }
-    60% { top: 5px; }
-    70% { top: -5px; }
-    80% { top: 5px; }
-    90% { top: -5px; }    
-    100% { top: 0px; }
+@keyframes fade {
+    0% { opacity: 0 ; }
+    50% { opacity: 1; }
+    100% { opacity: 0; }
 }
